modals no longer being cut off when device height is short

--- a/app/assets/stylesheets/section1.scss
+++ b/app/assets/stylesheets/section1.scss
@@ -521,9 +521,9 @@ height: 100%;
 }
 
 .fa-plus-square {
-    margin-top: -9px;
-    font-size: 26px;
-    color: rgba(45, 51, 221, 0.747) ;
+    // margin-top: -9px;
+    // font-size: 26px;
+    // color: rgba(45, 51, 221, 0.747) ;
     /* padding-top: 20px;  */
 }
 
